--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
     -->
     <title>React App</title>
   </head>
+  <style>
+    html,body{
+      height: 100%;
+      width: 100%;
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
